--- a/resume.html
+++ b/resume.html
@@ -5,22 +5,25 @@
     <head>
         <title>Elizabeth Pozzuoli</title>
         <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900" rel="stylesheet">
     </head>
 
     <body>
+      <div id="wrapper">
         <header>
 
-            <h1>Elizabeth Pozzuoli Resume</h1>
+            <h1>Elizabeth Pozzuoli</h1>
 
-            <nav>
+            <!-- <nav>
               <ul>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#professional-experience">Professional Experience</a></li>
-                <li><a href="#extracurricular-activities">Leadership Experience/Extracurricular Activities</a></li>
+                <li><a href="#extracurricular-activities">Extracurricular Activities</a></li>
                 <li><a href="#additional-interests">Additional Interests</a></li>
                 <li><a href="#contact-information">Contact Information</a></li>
               </ul>
-            </nav>
+            </nav> -->
 
         </header>
 
@@ -73,7 +76,7 @@
         </section>
 
         <section id="extracurricular-activities">
-            <h2>Leadership Experience/Extracurricular Activities</h2>
+            <h2>Extracurricular Activities</h2>
           <article>
               <h3>Distraction Magazine</h3> <p>Miami, FL: August 2016-Present</p>
                 <p><em>Assistant PR Manager</em></p>
@@ -124,7 +127,9 @@
               </ul>
           </article>
         </section>
+      </main>
 
+      <footer>
       <section id="contact-information">
         <h2>Contact Information</h2>
           <article>
@@ -137,8 +142,9 @@
             </address>
           </article>
         </section>
+      </footer>
 
-      </main>
+    </div>
     </body>
 
 </html>
