--- a/index.html
+++ b/index.html
@@ -1,30 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8"/>
-    <title>Elizabeth Pozzuoli</title>
-  </head>
+    <head>
+        <title>Elizabeth Pozzuoli</title>
+        <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet" />
+    </head>
 
-  <body>
-    <h1>Elizabeth Pozzuoli</h1>
-      <p>This is my second webpage. Yay!</p>
+    <body id="index">
+      <div id="wrapper">
+        <header>
+          <h1>Elizabeth Pozzuoli</h1>
 
-      <p>I like:</p>
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="writing.html">Writing</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+          </nav>
+        </header>
 
-      <ul>
-        <li>Food</li>
-        <li>Music</li>
-        <li>Movies</li>
-      </ul>
+        <main>
+          <section id="home">
 
-      <img src="octocat.png" alt="Octocat"/>
-      <p>This is an octocat</p>
+            <p>Dedicated, creative and hardworking.<p>
 
+            <p>These skills have allowed me to excel in my studies at the University of Miami School of Communication as a public relations major and marketing and interactive media minor.
 
-  </body>
+            <p>In high school, I held numerous leadership positions including in the arts, sports and community service.</p>
 
+            <p>As an intern at Outside Eyes Limited, a public relations firm, I am attained public relations and communications skills that supplement my classroom instruction.</p>
+          </section>
 
+          <section>
+            <p>This past summer, being an intern for Spirit Airlines, I was able to learn that taking the initiative will lead you to lots of new and unexpected opportunities.</p>
 
-</html>
+            <p>At UM, I am the graphic designer at the Student Activities and Student Organizations Office and the assistant PR manager of Distraction Magazine. In addition, I am a member of PRSSA, Zeta Tau Alpha, Orange Festival committee and Miss UM committee. I was recently chosen to be a Vice Chair for the Homecoming Executive Committee .</p>
+
+            <p>I am always striving to bring 100 percent to my work. It is my goal to improve and learn from all of my experiences and opportunities.</p>
+          </section>
+
+          <section>
+            <img src="me.jpg">
+          </section>
+
+        </main>
+      </div>
+    </body>
+</hmtl>
