--- a/resume.html
+++ b/resume.html
@@ -3,28 +3,24 @@
 <html lang="en">
 
     <head>
-        <title>Elizabeth Pozzuoli</title>
+        <title>Elizabeth Pozzuoli Resume</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900" rel="stylesheet">
     </head>
 
-    <body>
+    <body id="resume">
       <div id="wrapper">
         <header>
+          <h1>Elizabeth Pozzuoli</h1>
 
-            <h1>Elizabeth Pozzuoli</h1>
-
-            <!-- <nav>
-              <ul>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#professional-experience">Professional Experience</a></li>
-                <li><a href="#extracurricular-activities">Extracurricular Activities</a></li>
-                <li><a href="#additional-interests">Additional Interests</a></li>
-                <li><a href="#contact-information">Contact Information</a></li>
-              </ul>
-            </nav> -->
-
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="writing.html">Writing</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+          </nav>
         </header>
 
         <main>
